--- a/infra/k8s/ingress-srv.yml
+++ b/infra/k8s/ingress-srv.yml
@@ -4,12 +4,25 @@ metadata:
   name: ingress-srv
   annotations:
     kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/use-regex: "true"
 spec:
   rules:
     - host: posts.com
       http:
         paths:
-          - path: /posts
+          - path: /posts/create
             backend:
               seviceName: posts-cluster-ip-srv
               servicePort: 4000
+          - path: /posts
+            backend:
+              seviceName: query-srv
+              servicePort: 4002
+          - path: /posts/?(.*)/comments
+            backend:
+              seviceName: comments-srv
+              servicePort: 4001
+          - path: /?(.*)
+            backend:
+              seviceName: client-srv
+              servicePort: 3000
